# HomeWork_30

./: README.md  pyproject.toml  utils.py
HomeWork_27/: settings.py  urls.py
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_location_alter_ads_options_alter_categories_options_and_more.py  0002_rename_author_ads_author_id_and_more.py  0003_alter_ads_description.py  0003_selection.py  0004_rename_author_id_ads_author_and_more.py  0005_alter_location_name.py  0006_alter_users_options.py
data/: ad.csv
fixtures/: ads.json  categories.json  location.json  users.json
users/: models.py  serializer.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_date_joined_user_email_and_more.py  0003_alter_user_age.py  0004_alter_user_locations.py
