[tool.poetry]
name = "homework-27"
version = "0.1.0"
description = ""
authors = ["ageht <Vladimir.E.Pavlov@yandex.ru>"]
readme = "README.md"
packages = [{include = "homework_27"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
